Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44393

[OS X] Calibri font with letter spacing defined doesn't add space between letters "t" and "i"

    XMLWordPrintable

Details

    • macOS
    • fef629cd9191bb73f22c5efb6f943e6b672953c1 63b5f5cb98fe19af5bf20d4f581723cb91a46dcb

    Description

      When using Calibri font with letter spacing defined the extra space is missing between letters "t" and "i".

      Steps to reproduce:
      1. Build & Run the attached test application
      2. Notice the missing space between "t" and "i"

      Attachments

        1. FontTest.tar.gz
          174 kB
        2. Screen Shot.png
          Screen Shot.png
          17 kB
        For Gerrit Dashboard: QTBUG-44393
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes