src/gui/text/qtextengine_p.h
@@ -643,7 +643,13 @@ private:
     void addRequiredBoundaries() const;
     void shapeText(int item) const;
 #ifdef QT_ENABLE_HARFBUZZ_NG
-    int shapeTextWithHarfbuzzNG(const QScriptItem &si, const ushort *string, int itemLength, QFontEngine *fontEngine, const QVector<uint> &itemBoundaries, bool kerningEnabled) const;
+    int shapeTextWithHarfbuzzNG(const QScriptItem &si,
+                                const ushort *string,
+                                int itemLength,
+                                QFontEngine *fontEngine,
+                                const QVector<uint> &itemBoundaries,
+                                bool kerningEnabled,
+                                bool hasLetterSpacing) const;
 #endif
     int shapeTextWithHarfbuzz(const QScriptItem &si, const ushort *string, int itemLength, QFontEngine *fontEngine, const QVector<uint> &itemBoundaries, bool kerningEnabled) const;
 
